<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mobot_pub_des_state</name>
  <version>0.0.0</version>
  <description>The mobot_pub_des_state package</description>
  <maintainer email="wsn@case.edu">Wyatt Newman</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmw_implementation</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>traj_builder</depend>
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
